--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
            <div class="col-lg-6 col-12 box">
                 <h1 class="text-center mt-4">Income</h1>
                 <h4 class="d-inline">Salary:</h4>
-                <input class="w-50 salary"type="text" id="">
+                <input class="w-50 salary rounded"type="text" id="salary-amount">
                 <h1 class="text-center mt-2">Expenses</h1>
                 <h4 class="d-inline ">Rent Exp:</h4>
-                <input class=" w-50 rent"type="text" id=""><br><br>
+                <input class=" w-50 rent rounded"type="text" id="rent-amount"><br><br>
                 <h4 class="d-inline ">Food Exp:</h4>
-                <input class=" w-50 food"type="text" id=""><br><br>
+                <input class=" w-50 food rounded"type="text" id="food-amount"><br><br>
                 <h4 class="d-inline">Cloth Exp:</h4>
-                <input class="w-50 cloth"type="text" id=""><br><br>
-                <button class="rounded-3 button-cal" type="submit">Calculate</button><br><br>
-                <h3 class="text-center expense">Total Expenses: $<span>1000</span></h3>
-                <h3 class="text-center expense">Balance: $<span>1000</span></h3><br>
+                <input class="w-50 cloth rounded"type="text" id="cloth-amount"><br><br>
+                <button class="rounded-3 button-cal" type="submit" id="calculate-button">Calculate</button><br><br>
+                <h3 class="text-center expense">Total Expenses: $<span id="total-exp">0000</span></h3>
+                <h3 class="text-center expense">Balance: $<span id="balance-money">0000</span></h3><br>
                 <h4 class="d-inline ms-lg-5 ms-sm-1">Save:</h4>
-                <input class="save d-inline"type="text" id=""><span>  % </span>
+                <input class="save d-inline rounded"type="text" id=""><span>  % </span>
                 <button class="rounded-3 button-save" type="submit">Save</button><br><br>
-                <h4 class="text-center expense">Saving Amount: $<span>1000</span></h4>
-                <h4 class="text-center expense">Remaining Balance: $<span>1000</span></h4><br>
+                <h4 class="text-center expense">Saving Amount: $<span>0000</span></h4>
+                <h4 class="text-center expense">Remaining Balance: $<span>0000</span></h4><br>
            </div>
        </div>
     </section>
