--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
            <div class="col-lg-6 col-12 box">
                 <h1 class="text-center mt-4">Income</h1>
                 <h4 class="d-inline">Salary:</h4>
-                <input class="w-50 salary rounded"type="text" id="salary-amount">
+                <input class="w-50 salary rounded"type="text" id="salary-amount" required>
                 <h1 class="text-center mt-2">Expenses</h1>
                 <h4 class="d-inline ">Rent Exp:</h4>
-                <input class=" w-50 rent rounded"type="text" id="rent-amount"><br><br>
+                <input class=" w-50 rent rounded"type="text" id="rent-amount" required><br><br>
                 <h4 class="d-inline ">Food Exp:</h4>
-                <input class=" w-50 food rounded"type="text" id="food-amount"><br><br>
+                <input class=" w-50 food rounded"type="text" id="food-amount" required><br><br>
                 <h4 class="d-inline">Cloth Exp:</h4>
-                <input class="w-50 cloth rounded"type="text" id="cloth-amount"><br><br>
+                <input class="w-50 cloth rounded"type="text" id="cloth-amount" required><br><br>
                 <button class="rounded-3 button-cal" type="submit" id="calculate-button">Calculate</button><br><br>
                 <h3 class="text-center expense">Total Expenses: $<span id="total-exp">0000</span></h3>
                 <h3 class="text-center expense">Balance: $<span id="balance-money">0000</span></h3><br>
