--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <footer>
         <div class="bg-dark foot">
-           <p class="text-center">Copyright @ 2022 influencer Work</p>
+           <p class="text-center">Copyright © 2022 influencer Work</p>
         </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
